--- a/user-data/conf.yml
+++ b/user-data/conf.yml
@@ -11,7 +11,7 @@ pageInfo:
 
 # Optional app settings and configuration
 appConfig:
-  theme: colorful
+  theme: dashy-docs
 
 # Main content - An array of sections, each containing an array of items
 sections:
@@ -44,4 +44,18 @@ sections:
     description: Get help with Dashy, raise a bug, or get in contact
     url: https://github.com/Lissy93/dashy/blob/master/.github/SUPPORT.md
     icon: far fa-hands-helping
+
+ - name: Monitoring
+  icon: fas fa-rocket
+  items:
+  - title: Skywalking
+    description: Development a project management links for Dashy
+    icon: https://i.ibb.co/qWWpD0v/astro-dab-128.png
+    url: https://skywalking.besmart.travel/General-Service/Services
+    target: newtab  
+   - title: grafana
+    description: Development a project management links for Dashy
+    icon: https://i.ibb.co/qWWpD0v/astro-dab-128.png
+    url: https://loki.besmart.travel/?orgId=1
+    target: newtab    
   
